--- a/JavaScript/01-js中的对象/selfObjectDemo06_自定义对象.html
+++ b/JavaScript/01-js中的对象/selfObjectDemo06_自定义对象.html
@@ -23,6 +23,23 @@
     			...
 			  };
      */
+    let student = {
+      name: "szl",
+      age: "23",
+      gender: "male",
+      
+      getName:function(){
+        return student.name;
+      },
+
+      getAge:function(){
+        return student.age;
+      }
+    }
+
+    document.write("学生名为："+student.getName()+"<br/>") 
+    document.write("学生名年龄为："+student.getAge())
+
     let person ={
       //属性名:属性值
       name:"柳岩",
