--- a/JavaScript/02-js中的BOM对象/demo03_window.history.back().html
+++ b/JavaScript/02-js中的BOM对象/demo03_window.history.back().html
@@ -12,7 +12,7 @@
     <title>Title</title>
 </head>
 <body>
-  <button onclick="fn1()"><-</button>
+  <button onclick="fn1()">后退</button>
   <script type="text/javascript">
       /*
         history历史记录对象
