--- a/JavaScript/05-js的事件绑定/demo01_onclick.html
+++ b/JavaScript/05-js的事件绑定/demo01_onclick.html
@@ -43,7 +43,7 @@
     document.getElementsByClassName("cls") 获取的内容是[input标签对象]
     document.getElementsByClassName("cls")[0] 获取上述数组中索引是0的标签对象===》input标签对象
   */
-  document.getElementsByClassName("cls")[0].onclick=function(){//错误的，ocument.getElementsByClassName("cls")是数组
+  document.getElementsByClassName("cls")[0].onclick=function(){
     console.log("我又被点了");
   }
  
