--- a/JavaScript/06-常见事件/常见事件.html
+++ b/JavaScript/06-常见事件/常见事件.html
@@ -53,7 +53,11 @@
 
     <input type="submit" value="提交">
 </form>
-
+<script>
+    document.getElementById("register").onsubmit = function(){
+        window.alert("表单提交成功")
+    }
+</script>
 
 
 </body>
