--- a/Ajax_Vue/ajax/demo01.html
+++ b/Ajax_Vue/ajax/demo01.html
@@ -53,7 +53,7 @@
                 2.username=锁哥&password=1234：表示向后台携带的参数，和地址之间使用?分隔 锁哥和1234可以换
     */
    //TODO:向后台发送ajax的get异步请求
-   axios.get("http://localhost:8080/axiosDemo01Servlet?username=柳岩&password=1234")
+   axios.get("http://localhost:8080/axiosDemo01Servlet?username=陈涛&password=0123")
         .then(resp=>{
             //后台响应成功，在这里处理后台响应数据的
             /*
