--- a/Ajax_Vue/vue/01_Vue快速入门/01-快速入门.html
+++ b/Ajax_Vue/vue/01_Vue快速入门/01-快速入门.html
@@ -10,7 +10,8 @@
     <div id="app">
         <!-- 在vue中有个插值表达式简称插值可以获取数据模型中的数据并显示到页面中  {{数据模型中的冒号左边的标识}}-->
         <!-- 注意：插值必须放到vue的视图中才可以获取数据 -->
-        {{msg}}
+        <div>{{msg}}</div>
+        <div v-html = msg>
     </div>
 
     
