--- a/Ajax_Vue/vue/02_Vue常用指令/02-绑定属性_v-bind.html
+++ b/Ajax_Vue/vue/02_Vue常用指令/02-绑定属性_v-bind.html
@@ -18,6 +18,7 @@
         -->
         <!-- 不是vue指令写法 -->
         <!-- <a href="https://www.baidu.com">百度一下</a> -->
+         <!-- 这样写不对！ -->
         <a href="{{url}}">百度一下</a>
 
         <br>
