--- a/Ajax_Vue/vue/02_Vue常用指令/06-表单绑定_v-model.html
+++ b/Ajax_Vue/vue/02_Vue常用指令/06-表单绑定_v-model.html
@@ -14,7 +14,7 @@
             姓名_单向绑定：<input type="text" name="username" v-bind:value="username">
             <br>
             <!--
-                双向绑定 使用的指令v-model="数据模型中的key"
+                双向绑定 使用的指令v-model="数据模型data中的key"
             -->
             姓名_双向绑定：<input type="text" name="username" v-model="username">
             <br>
